# C-Calculator

./: .dockerignore  .gitignore  Dockerfile  Makefile
.github/workflows/: c-cpp.yml
lib/: CMakeLists.txt  calculator.cpp  calculator.h
tests/: CMakeLists.txt  test_calculator.cpp
