cmake_minimum_required(VERSION 3.0)
project(Calculator)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(SOURCE_FILES Calculator.cpp)
add_library(calculator_lib STATIC ${SOURCE_FILES})
INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}")
set(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/lib)
target_include_directories(calculator_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})